fixed align for textbox

--- a/public/css/navigation/navigation.css
+++ b/public/css/navigation/navigation.css
@@ -232,10 +232,13 @@ src: local("Lucida Console");
 
 /* the filter bar on the feedback page */
 #filter-bar{
-  background-color: rgba(26, 26, 26, 0.9);
+  background-color: rgba(26,26,26,.9);
   border-radius: 10px;
+  z-index: 0;
 }
-
+.filter-search {
+  margin-top: 17px;
+}
 
 
 
